--- a/main.html
+++ b/main.html
@@ -25,7 +25,9 @@
         }
 
         .container {
-            margin-top: 50px;
+            margin: 18% auto 7%;
+            max-width: 1000px;
+            width: 86%;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 20px;
@@ -168,7 +170,6 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
